# mavdac

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
rust/: Cargo.toml
rust/src/: basis.rs  errors.rs  geom.rs  io.rs  lib.rs
src/mavdac/: __init__.py  __main__.py  display.py  util.py
src/tests/: grid.yaml  mavis_dists.txt  test_all.py  test_recovery.py  test_simple_recovery.py  test_validate.py
